bug: tabs-container shake on firefox

--- a/packages/dockview-core/src/dockview/components/titlebar/tabs.scss
+++ b/packages/dockview-core/src/dockview/components/titlebar/tabs.scss
@@ -4,6 +4,13 @@
     overflow: auto;
     scrollbar-width: thin; // firefox
 
+    &.dv-tabs-container-vertical {
+        width: 100%;
+        height: fit-content;
+        max-height: 100%;
+        writing-mode: vertical-rl;
+    }
+
     &.dv-horizontal,
     &.dv-vertical {
         .dv-tab {
@@ -19,14 +26,21 @@
         }
     }
 
-    &.dv-horizontal .dv-tab:not(:first-child)::before {
-        width: 1px;
-        height: 100%;
+    &.dv-horizontal {
+        .dv-tab {
+            &:not(:first-child)::before {
+                width: 1px;
+                height: 100%;
+            }
+        }
     }
-
-    &.dv-vertical .dv-tab:not(:first-child)::before {
-        width: 100%;
-        height: 1px;
+    &.dv-vertical {
+        .dv-tab {
+            &:not(:first-child)::before {
+                width: 100%;
+                height: 1px;
+            }
+        }
     }
 
     &::-webkit-scrollbar {
@@ -43,14 +57,6 @@
         background: var(--dv-tabs-container-scrollbar-color);
     }
 
-    &.dv-tabs-container-vertical {
-        flex-direction: column;
-
-        .dv-tab {
-          writing-mode: vertical-rl;
-          transform: rotate(180deg);
-        }
-    }
 }
 
 .dv-scrollable {
@@ -68,6 +74,12 @@
     box-sizing: border-box;
     font-size: var(--dv-tab-font-size);
     margin: var(--dv-tab-margin);
+}
+
+.dv-tabs-container-vertical {
+    .dv-tab {
+        padding: 0.5rem 0.25rem;
+    }
 }
 
 .dv-tabs-overflow-container {
